Thu Mar 11 18:36:59 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/gswapp.make: Rewritten to use the new
	Instance/Shared/bundle.make, so that for example subprojects with
	resources now should be possible.

Thu Mar 11 02:26:20 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/gswapp.make: Do not create library_paths.openapp on
	Apple.  ($(GNUSTEP_INSTANCE).iconheader): Rule removed.
	
2004-03-09  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUMakefile.in (GNUSTEP_TEXI2HTML_FLAGS): Add
	init_file flag

	* Documentation/README.MinGW: Update library locations.

Tue Mar  9 17:28:37 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Make by default GNUSTEP_NETWORK_ROOT the same as
	GNUSTEP_LOCAL_ROOT.  This has the effect of disabling
	GNUSTEP_NETWORK_ROOT by default, which is very rarely used - if
	ever, and simplifying paths and flags.
	* configure: Regenerated.

Tue Mar  9 17:25:16 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make (GNUSTEP_HEADERS_DIRS, GNUSTEP_LIBRARIES_DIRS,
	GNUSTEP_HEADER_FND_DIRS): Rewritten the code creating the list of
	-I and -L flags to pass to the compiler and linker so that if two
	GNUSTEP_XXX_ROOT are the same, the flags are added only once.

Tue Mar  9 17:21:34 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make: Removed stale debugging statement.

Tue Mar  9 17:05:38 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make (GNUSTEP_HEADERS_FND_DIRS): Only set these flags
	when libFoundation is used.  In the standard case, we no longer
	add the -Ixxx/Headers/gnustep/ flags.
	* library-combo.make (GNUSTEP_FND_DIR): Do not define.
	* rules.make (ALL_OBJCFLAGS): Removed GNUSTEP_HEADERS_FND_FLAG.
	(ALL_CFLAGS): Same change.
	
Tue Mar  9 16:58:50 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (ALL_OBJCFLAGS): Removed GNUSTEP_HEADERS_GUI_FLAG,
	which is defined nowhere.
	(ALL_CFLAGS): Same change.
	
Mon Mar  8 13:52:43 2004  Nicola Pero  <n.pero@mi.flashnet.it>
