@@ -1,3 +1,8 @@
+Mon Mar 15 13:57:50 2004  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* GNUmakefile.in: Fixed installation of strip_makefiles.sh when
+	using a different build directory.
+
 Thu Mar 11 18:36:59 2004  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Instance/gswapp.make: Rewritten to use the new
